# nangila_v0.1.0

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT.tex
docs/archive/: codebase-analysis-report.md  nangila-spice-addendum.md  pre-v0.1-deployment-results.md  pre-v0.1-pipeline-implementation.md  verification-report.md  verification-report.tex  whitepaper-v2.md  whitepaper.md
docs/releases/: changelog-template.md  release-checklist.md  v0.1-release.md  v0.1-support-matrix.md  versioning-policy.md
docs/strategy/: open-core-roadmap.md  open-core-spec.md
examples/: README.md  test_ddp_gpu.py  test_phase1.py  train_fsdp_llm.py  verify_overfit.py  verify_sharding.py
examples/experimental/: benchmark.py  fsdp_train.py  train_llm.py  verify_grads.py
nangila-core/: Cargo.toml
nangila-core/benches/: compressor.rs  predictor.rs  quantizer.rs
nangila-core/src/: checkpoint.rs  compressor.rs  compressor_tests.rs  config.rs  dgc.rs  dtype.rs  fixed_point.rs  lib.rs  mask.rs  metrics.rs  packet.rs  power_sgd.rs  predictor.rs  quantizer.rs  reconstructor.rs  safe_mode.rs  sculptor.rs  state.rs  topology_report.rs
nangila-cuda/: Cargo.toml  build.rs
nangila-cuda/src/: bindings.rs  bindings_test.rs  lib.rs  state.rs
nangila-cuda/src/kernels/: crc32.cu  gamma.cu  mod.rs  predict.cu  reconstruct.cu
nangila-dump/: Cargo.toml
nangila-dump/src/: main.rs
nangila-hook/: Cargo.toml
nangila-hook/src/: ffi.rs  gpu_methods.rs  hook.rs  lib.rs  python.rs
nangila-intercept/: CMakeLists.txt  README.md  build.sh  intercept.cpp
nangila-intercept/include/: nangila.h
nangila-profile/: Cargo.toml
nangila-profile/src/: main.rs
nangila-spice/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
nangila-spice/.github/workflows/: ci.yml  extended-correctness.yml  install-smoke.yml
nangila-spice/artifacts/: phase1_benchmark_report.json
nangila-spice/benchmarks/auto_synth/: c1355.sp  c17.sp  c1908.sp  c2670.sp  c3540.sp  c432.sp  c499.sp  c5315.sp  c6288.sp  c7552.sp  c880.sp  s1238.sp  s13207.sp  s1423.sp  s1488.sp  s15850.sp  s27.sp  s35932.sp  s382.sp  s38417.sp  s38584.sp  s420.sp  s5378.sp  s641.sp  s713.sp  s9234.sp
nangila-spice/benchmarks/reference_circuits/: c17_full.sp  c17_synth.sp  inverter.sp  sram_6t.sp
nangila-spice/docs/: correctness-first-benchmark-report.md  correctness-first-release-note.md  github-launch-draft.md  phase-1-benchmark-report.md  phase-1-implementation-plan.md  phase-1-summary-note.md  production-roadmap.md  v1-simulator-contract.md
nangila-spice/nangila-node/: Cargo.toml  build.rs
nangila-spice/nangila-node/cuda/: cusparse_solver.cu
nangila-spice/nangila-node/src/: balancer.rs  benchmark.rs  codec.rs  comm.rs  device_model.rs  fabric.rs  ghost.rs  gpu_solver.rs  lib.rs  main.rs  mna.rs  newton.rs  ngspice_ffi.rs  nz.rs  parser.rs  predictor.rs  pvt.rs  solver.rs
nangila-spice/python/nangila_spice/: __init__.py  benchmark.py  cli.py  graph.py  orchestrator.py  parser.py  partitioner.py  pvt_orchestrator.py
nangila-spice/python/tests/: test_integration.py  test_partitioner.py  test_pvt_orchestrator.py
nangila-spice/src/nangila_spice/: __init__.py  cli.py  correctness.py  merger.py  nz_reader.py  nz_viewer.py  orchestrator.py  phase1_report.py  pvt_orchestrator.py  visualizer.py
nangila-spice/src/tests/: test_correctness.py  test_integration.py  test_pvt_orchestrator.py
nangila-spice/tests/spice_examples/: simple_rc.sp
nangila_ddp/: CMakeLists.txt  README.md  setup.py
nangila_ddp/include/: nangila_ffi.h
nangila_ddp/src/: bindings.cpp  ddp_hook.cpp
nangila_v01/: README.md  release-manifest.toml
python/nangila/: __init__.py  ddp.py  experimental.py  fsdp.py  nangila.pyi  py.typed
scripts/: bandwidth_benchmark.py  calibrate.py  run_full_validation.sh  setup_8gpu.sh  train_llm.py
tests/: README.md  conftest.py  gpu_test_suite.sh  test_cifar10.py  test_cuda_error_handling.py  test_ddp.py  test_ddp_correctness.py  test_fsdp_sharding.py  test_sculptor.py  test_stress.py  verify_fsdp_gpu.py
tests/phase1_truth/: test_1_1_grads.py  test_1_2_overfit.py  test_1_3_sharding.py
tests/phase2_speed/: test_2_1_throughput.py
tests/smoke/: test_cuda_error_handling.py  test_simple_compression.py
