[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nangila"
version = "0.1.0"
description = "Gradient virtualization for distributed DNN training"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["pytorch", "distributed", "training", "compression", "gradients"]

dependencies = [
    "numpy>=1.20",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.0",
]

[project.urls]
Homepage = "https://github.com/nangila/nangila"
Documentation = "https://github.com/nangila/nangila#readme"
Repository = "https://github.com/nangila/nangila"

[tool.maturin]
features = ["pyo3/extension-module", "cuda", "python"]
python-source = "python"
module-name = "nangila"
manifest-path = "nangila-hook/Cargo.toml"
