[workspace]
members = [
    "nangila-node",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Craig Chirara <craig@nangila.dev>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across workspace crates
faer = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
