[package]
name = "nangila-node"
description = "Nangila SPICE Solver Node — Predictive Partitioned Circuit Simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nangila-node"
path = "src/main.rs"

[dependencies]
faer.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
cc = "1.2.56"

[features]
cuda = []
